k8s/pod.yaml
#N usa

apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  containers:
    - name: "goserver"
      image: "gabsferrara/hello-go:latest"
