k8s/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-headless
  # podManagementPolicy: Parallel //para poder criar em paralelo, quando nao importa a ordem de delete/subir, mas teria que escalar manualmente
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-volume

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
