k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless #tem q ser igual ao serviceName do stetafullset
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
  ClusterIP: None
